Layout changes to remove horizontal scrollbar, and remove overflow issues when sheet isn't fixed height.

--- a/src/BlazorDatasheet/Datasheet.razor.css
+++ b/src/BlazorDatasheet/Datasheet.razor.css
@@ -15,10 +15,13 @@
     display: inline-block;
 }
 
-table {
-
-    max-width: fit-content;
+.sheet-fixed-height{
     overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.sheet-dynamic-height{
+
 }
 
 .sheet-cell {
